复制 mybatis-generator 的maven插件项目。

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 
     <modules>
         <module>mybatis-generator</module>
+        <module>mybatis-generator-maven-plugin</module>
     </modules>
 
     <build>
