生成指定的sql方法。

--- a/mybatis-generator-maven-plugin/pom.xml
+++ b/mybatis-generator-maven-plugin/pom.xml
@@ -91,7 +91,7 @@
         </dependency>
         <dependency>
             <groupId>com.hdup.code.common</groupId>
-            <artifactId>mybatis-generator</artifactId>
+            <artifactId>mybatis-generator-core</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
